Fix sidebar being too long for GNU/Linux and Windows categories

--- a/source/stylesheets/screen.styl
+++ b/source/stylesheets/screen.styl
@@ -22,7 +22,7 @@
     position absolute
 
 // solves fixed sidebar (category show) being too long
-@media (max-height: 720px)
+@media (max-height: 755px)
   body.categories.show #container .content-side
     position absolute
 
